[flake8]
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = paws
multi_line_output = 5
not_skip = __init__.py

[wheel]
universal = 1

[metadata]
name = PAWS
version = 0.2.0
description = Python AWS Tools for Serverless
author = Curtis Maloney
author_email = curtis@tinbrain.net
url = https://github.com/funkybob/paws

[options]
zip_safe = False
packages = find:
package_dir =
    =src

[options.packages.find]
where=src
